# Microcomputertechnik

./: .gitignore  Arduino.cpp  CMakeLists.txt  Literature.md  Print.cpp  Print.h  README.md  avrAbstraction.h  cExamples.cpp  halUsage.cpp  main.cpp
02_UebungIO/: 02_UebungIO.c
ARM_M0/Exercises/04_StateMachine/: 04_StateMachine.ino
AVR/Examples/: FloatingPoint.c
AVR/Examples/StateMachine/: stateMachine.cpp
AVR/Examples/Testing/: getNextState.c
AVR/Examples/TimerInterrupt/: dump.cpp  dump.h
AVR/Examples/lowPower/: lowPower.ino
AVR/Exercises/03_Interrupts/: 03_Interrupts.ino
Arduino/Exercises/04_StateMachine/: 04_StateMachine.ino
Diagrams/: NonPreemptiveScheduling.puml  PriorityBasedScheduling.puml  RoundRobinScheduling  RoundRobinScheduling.puml  SequenceDiagram.puml  compile.sh
Examples/: cExamples.cpp  cExamples.h  examples.cpp  examples.h  halUsage.cpp  halUsage.h  main.cpp  stateMachine.cpp  stateMachine.h
Examples/AVR/Testing/: getNextState.h
Examples/C_Introduction/: examples.h
Examples/FreeRTOS/: messageQueue.c
Exercises/: README.md
Exercises/02_UebungIO/: 02_ÜbungIO.c
Exercises/02_UebungIO_Aufgabe4/: 02_UebungIO_Aufgabe4.ino
Exercises/02_UebungIO_RTOS/: 02_UebungIO_RTOS.c
Exercises/03_Interrupts_1B/: 03_Interrupts_1B.ino
Exercises/04_StateMachine/: 04_StateMachine.ino
Exercises/CPU/: Solutions.md  Tasks.md
Exercises/GPU/: Tasks.md
Exercises/VirtualMachine/: Bewertungsraster.md  Tasks.md
HAL/: Arduino.cpp  Arduino.h  Print.h  pins_arduino.h
Slides/: Slides.md  render.sh
Testing/: Testing.ino  continuous.cpp
(+26 files in other folders)
